--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,19 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+ffi = true
+optimizer = true
+evm_version = 'shanghai'
+fs_permissions = [{ access = "read", path = "./" }]
+
+remappings = [
+    'foundry-huff/=lib/foundry-huff/src/',
+    '@openzeppelin/=lib/openzeppelin-contracts/contracts/',
+]
+
+[fuzz]
+runs = 256
+seed = '0x3'
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
